--- a/src/dwh.cfg
+++ b/src/dwh.cfg
@@ -1,9 +1,9 @@
 [CLUSTER]
 HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_PORT=
+DB_NAME=dwh
+DB_USER=dwhuser
+DB_PASSWORD=Passw0rd
+DB_PORT=5439
 
 [IAM_ROLE]
 ARN=''
@@ -12,3 +12,14 @@ ARN=''
 LOG_DATA='s3://udacity-dend/log-data'
 LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
 SONG_DATA='s3://udacity-dend/song-data'
+
+[DWH]
+CLUSTER_TYPE=multi-node
+NUM_NODE=4
+NODE_TYPE=dc2.large
+IAM_ROLE_NAME=dwrole
+CLUSTER_IDENTIFIER=dwhcluster
+DB_NAME=dwh
+DB_USER=dwhuser
+DB_PASSWORD=Passw0rd
+DB_PORT=5439
