--- a/src/dwh.cfg
+++ b/src/dwh.cfg
@@ -1,12 +1,12 @@
 [CLUSTER]
-HOST=
+HOST=dwhcluster.ce24x5xhpnfz.us-west-2.redshift.amazonaws.com
 DB_NAME=dwh
 DB_USER=dwhuser
 DB_PASSWORD=Passw0rd
 DB_PORT=5439
 
 [IAM_ROLE]
-ARN=''
+ARN='arn:aws:iam::242197210661:role/dwhRole'
 
 [S3]
 LOG_DATA='s3://udacity-dend/log-data'
