--- a/src/dwh.cfg
+++ b/src/dwh.cfg
@@ -1,12 +1,15 @@
 [CLUSTER]
-HOST=dwhcluster.ce24x5xhpnfz.us-west-2.redshift.amazonaws.com
+HOST='xxxxxxxx'
 DB_NAME=dwh
 DB_USER=dwhuser
 DB_PASSWORD=Passw0rd
 DB_PORT=5439
 
 [IAM_ROLE]
-ARN='arn:aws:iam::242197210661:role/dwhRole'
+ARN='xxxxxxxxxxx'
+NAME=
+POLICY_NAME=
+REDSHIFT_ARN='xxxxxxxx'
 
 [S3]
 LOG_DATA='s3://udacity-dend/log-data'
